# auto-update-config

./: .ai-instructions  .flake8  .gitignore  .markdownlint.yml  .pylintrc  .yamllint.yml  CHANGELOG.md  CNAME  README.md  build_personal.py  funfair-repos.config  funfair-templates.config  github_client.py  packages.config  packages.json  packages.lst  personal-repos.config  personal-templates.config  pyproject.toml  release.config  release.json  repos.lst  requirements.txt  suppressions.txt  templates.json  update_repos.py
.github/: dependabot.yml
.github/linters/: .python-lint
.github/workflows/: build-and-publish-pre-release.yml  build-and-publish-release.yml  build_personal_repos.yml  codeql-analysis-csharp.yml  codeql-analysis-javascript.yml  codeql-analysis-python.yml  deploy.yml  todos.yml  (+12 more)
auto_update_config.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
funfair/: funfair-wrecking-league.lst  repos-casino.lst  repos-eth.lst  repos-labs-old.lst  repos-wallet.lst  repos.lst  templates.json
personal/: repos.lst  templates.json
tests/: test_add_existing_github_check.py  test_add_github_build.py  test_build_personal.py  test_get_branch_protection_settings.py  test_github_client.py  test_github_client_get.py  test_github_client_patch.py  test_github_client_put.py  test_has_existing_check.py  test_have_branch_protection_settings_changed.py  test_invite_collaborators.py  test_is_excluded.py  test_is_updatable_repo.py  test_make_query.py  test_repo_url_to_owner_and_name.py  test_set_branch_protection_settings.py  test_update.py  test_update_repos.py
(+4 files in other folders)
