[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-update-config"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-graphql-client==0.4.3",
    "httpx",
    "feedparser",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
